--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,43 @@
+# Netlify Configuration for StethoLink AI
+# This file forces Netlify to use our custom build script
+
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "node netlify-build.js"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
 
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
+# API redirects
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
+  status = 200
+
+# Health check redirect
+[[redirects]]
+  from = "/health"
+  to = "/.netlify/functions/health"
+  status = 200
+
+# Auth redirects
+[[redirects]]
+  from = "/auth/*"
+  to = "/.netlify/functions/auth/:splat"
+  status = 200
+
+# SPA fallback (must be last)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# Security headers
 [[headers]]
   for = "/*"
   [headers.values]
@@ -18,12 +46,14 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
 
+# Service Worker headers
 [[headers]]
   for = "/sw.js"
   [headers.values]
     Cache-Control = "no-cache"
     Service-Worker-Allowed = "/"
 
+# Manifest headers
 [[headers]]
   for = "/manifest.json"
   [headers.values]
