--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Cross-platform multilingual medical diagnostic chatbot for WhatsApp and Telegram",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node start-minimal.js",
     "start-standalone": "node start-standalone.js",
     "dev": "nodemon src/server.js",
+    "railway:start": "node src/server-railway.js",
     "test": "node test-advanced-features.js",
     "test:production": "node test-production-readiness.js",
     "deploy:heroku": "node deploy-heroku-backend.js",
     "deploy:railway": "node deploy-railway-backend.js",
     "test-mobile": "node test-mobile-app.js",
     "build": "node build.js",
+    "build:netlify": "npm run build && echo 'Netlify Functions ready'",
+    "build:railway": "node build-railway.js",
     "build:mobile": "node build-mobile-app.js",
     "build:android": "npm run build:mobile && npx cap build android",
     "build:ios": "npm run build:mobile && npx cap build ios",
