--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,8 @@
   NODE_VERSION = "18"
   # Disable secrets scanning temporarily for development
   SECRETS_SCAN_ENABLED = "false"
+  # Only essential environment variables
+  NODE_ENV = "production"
 
 [functions]
   directory = "netlify/functions"
