--- a/env.example
+++ b/env.example
@@ -52,7 +52,7 @@ MAX_FILE_SIZE=10485760
 UPLOAD_PATH=uploads/
 
 # Security
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://awake-courage-production.up.railway.app
 SESSION_SECRET=your-session-secret
 
 # External APIs
